# auth/apidocs/swagger.json
@@ -1,5 +1,5 @@
 {
-  "basePath": "/auth/v1",
+  "basePath": "/api/v1/auth",
   "definitions": {
     "Action": {
       "properties": {
@@ -27,6 +27,14 @@
         }
       },
       "type": "object"
+    },
+    "Genre": {
+      "properties": {
+        "genre": {
+          "type": "string"
+        }
+      },
+      "type": "string"
     },
     "GenreList": {
       "properties": {
@@ -153,6 +161,39 @@
           }
         ],
         "summary": "Get users genres.",
+        "tags": [
+          "user"
+        ]
+      },
+      "post": {
+        "parameters": [
+          {
+            "in": "body",
+            "name": "Genre name",
+            "required": true,
+            "schema": {
+              "properties": {
+                "genre_name": {
+                  "type": "string"
+                }
+              },
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Genre added"
+          },
+          "401": {
+            "$ref": "#/responses/Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "tags": [
           "user"
         ]
